Check whether the texturemaskinfo is valid before using it

BUG:441356